# xdict

./: CMakeLists.txt  README.md  config.json  icons.qrc
qml/: FloatingWin.qml  Main.qml  SettingBaidu.qml  SettingMain.qml  SettingWin.qml
source/: baidutrans.cpp  baidutrans.h  baidutranslate.cpp  baidutranslate.h  blockingqueue.h  eventmonitor.cpp  eventmonitor.h  floatingwin.cpp  floatingwin.h  main.cpp  picker.cpp  picker.h  queryworker.cpp  queryworker.h  translator.cpp  translator.h  xcontroller.cpp  xcontroller.h
